# employee-management

./: LICENSE  README.md
backend/: .gitignore
backend/backend/: settings.py
client/: .pre-commit-config.yaml  INSTALL.md  README.md  package-lock.json  package.json
client/components/auth/login/: LogIn.tsx
client/components/auth/protected/: ProtectedRoute.jsx  (+1 more)
client/components/employees/: index.tsx
client/components/home/: index.tsx
client/components/login/: LogIn.tsx
client/components/registration/: Registration.tsx
client/sites/: index.tsx
client/sites/employees/: empPage.tsx  index.tsx
client/sites/home/: Home.scss  Home.tsx
client/sites/login/: LoginPage.tsx
client/sites/registration/: Registration.tsx
client/src/app/: api.ts  globals.css  layout.tsx  not-found.tsx  page.tsx
client/types/: employee.d.ts
server/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
server/accounts/: auth.py  models.py  serializers.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_user_employee.py  0003_alter_user_managers.py
server/departments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/departments/migrations/: 0001_initial.py  0002_delete_department.py
server/employee/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/employee/migrations/: 0001_initial.py  0002_remove_employee_created_at_and_more.py  0003_alter_employee_salary.py  0004_alter_employee_user.py
server/server/: asgi.py  settings.py  urls.py  wsgi.py
(+26 files in other folders)
